{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 236,
  "lineage": "6a407c41-4b81-9d77-8fdb-77bffb33dd30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jena_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3fc84ae593a8b04",
            "arn": "arn:aws:ec2:eu-west-1:438465169137:elastic-ip/eipalloc-0a3fc84ae593a8b04",
            "association_id": "eipassoc-000954f2ce73327b4",
            "domain": "vpc",
            "id": "eipalloc-0a3fc84ae593a8b04",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07ee22a0f5a16881f",
            "private_dns": "ip-10-0-1-131.eu-west-1.compute.internal",
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-34-241-212-69.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.212.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jena-nat-eip"
            },
            "tags_all": {
              "Name": "jena-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jena_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:internet-gateway/igw-077d92dee64f574ac",
            "id": "igw-077d92dee64f574ac",
            "owner_id": "438465169137",
            "tags": {
              "Name": "jena-igw"
            },
            "tags_all": {
              "Name": "jena-igw"
            },
            "vpc_id": "vpc-059692483961beaac"
          },
          "dependencies": [
            "aws_vpc.jena_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jena_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3fc84ae593a8b04",
            "association_id": "eipassoc-000954f2ce73327b4",
            "connectivity_type": "public",
            "id": "nat-0a53b8cc7b76abe14",
            "network_interface_id": "eni-07ee22a0f5a16881f",
            "private_ip": "10.0.1.131",
            "public_ip": "34.241.212.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ab5409ce9cc004b",
            "tags": {
              "Name": "jena-nat-gateway"
            },
            "tags_all": {
              "Name": "jena-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.jena_nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:route-table/rtb-01677368bc9b0c448",
            "id": "rtb-01677368bc9b0c448",
            "owner_id": "438465169137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a53b8cc7b76abe14",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jena-private-route-table"
            },
            "tags_all": {
              "Name": "jena-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-059692483961beaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jena_nat_eip",
            "aws_nat_gateway.jena_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:route-table/rtb-02d744d703e3786e5",
            "id": "rtb-02d744d703e3786e5",
            "owner_id": "438465169137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077d92dee64f574ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jena-public-route-table"
            },
            "tags_all": {
              "Name": "jena-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-059692483961beaac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jena_igw",
            "aws_vpc.jena_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dcc0a48532a6b37",
            "route_table_id": "rtb-01677368bc9b0c448",
            "subnet_id": "subnet-01c7fc3db13f1c685"
          },
          "dependencies": [
            "aws_eip.jena_nat_eip",
            "aws_nat_gateway.jena_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065a2e49a4099011c",
            "route_table_id": "rtb-01677368bc9b0c448",
            "subnet_id": "subnet-09315cb9dd0792c27"
          },
          "dependencies": [
            "aws_eip.jena_nat_eip",
            "aws_nat_gateway.jena_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb54d181ca780dc",
            "route_table_id": "rtb-02d744d703e3786e5",
            "subnet_id": "subnet-00ab5409ce9cc004b"
          },
          "dependencies": [
            "aws_internet_gateway.jena_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090cb4efd20fa5cea",
            "route_table_id": "rtb-02d744d703e3786e5",
            "subnet_id": "subnet-02e88cd53ce4115cc"
          },
          "dependencies": [
            "aws_internet_gateway.jena_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:subnet/subnet-01c7fc3db13f1c685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c7fc3db13f1c685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jena-private-subnet-1"
            },
            "tags_all": {
              "Name": "jena-private-subnet-1"
            },
            "vpc_id": "vpc-059692483961beaac"
          },
          "dependencies": [
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:subnet/subnet-09315cb9dd0792c27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09315cb9dd0792c27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jena-private-subnet-2"
            },
            "tags_all": {
              "Name": "jena-private-subnet-2"
            },
            "vpc_id": "vpc-059692483961beaac"
          },
          "dependencies": [
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:subnet/subnet-00ab5409ce9cc004b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ab5409ce9cc004b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jena-public-subnet-1"
            },
            "tags_all": {
              "Name": "jena-public-subnet-1"
            },
            "vpc_id": "vpc-059692483961beaac"
          },
          "dependencies": [
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:subnet/subnet-02e88cd53ce4115cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e88cd53ce4115cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465169137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jena-public-subnet-2"
            },
            "tags_all": {
              "Name": "jena-public-subnet-2"
            },
            "vpc_id": "vpc-059692483961beaac"
          },
          "dependencies": [
            "aws_vpc.jena_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jena_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:438465169137:vpc/vpc-059692483961beaac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeedade23a6cef79",
            "default_route_table_id": "rtb-0fda27817bfa5547d",
            "default_security_group_id": "sg-0db5eebc62f71098a",
            "dhcp_options_id": "dopt-073c2b8749abb7fe4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059692483961beaac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fda27817bfa5547d",
            "owner_id": "438465169137",
            "tags": {
              "Name": "jena-vpc"
            },
            "tags_all": {
              "Name": "jena-vpc"
            }
          }
        }
      ]
    }
  ]
}